# hellocrud

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  hellocrud-dir-layout.txt
docs/: Cargo.toml.ps  Makefile.ps  README.md.ps  hellocrud-dir-layout.txt.ps
src/: #classes.rs#  .#classes.rs  classes.rs  functions.rs  main.rs  test.rs
