[package]
name = "hellocrud"
version = "0.1.0"
edition = "2021"
description = "CRUD demo app using clap"
license = "Apache-2.0"
homepage = "https://github.com/learnrust/hellocrud"
documentation = "https://github.com/learnrust/hellocrud"
authors = ["T.J. Yang <tjyang2001@gmail.com>"]
repository = "https://github.com/learnrust/hellocrud"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", default-features = false, features = ["std", "help","cargo","derive"] }

